# DocToTalk

./: .env  README.md  main.py  pyproject.toml  requirements.txt
components/: custom_dialog.py  custom_loading.py  custom_snackbar.py
pages/: chat_page.py  login_page.py
utils/: chat_with_doc.py
