[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ChatDoc"
version = "1.0.0"
dependencies = [
    "flet==0.22.*",
    "rich==13.7.1",
    "tiktoken==0.7.0",
    "langchain_community==0.2.6",
    "llama-cpp-python==0.2.79",
    "PyMuPDF==1.24.7"
]
requires-python = ">=3.10"
authors = [
  {name = "Ing. Hector Curbelo Barrios"},
  {email = "hcurbelo@gmail.com"},
]
maintainers = [
  {name = "Hector Curbelo Barrios", email = "hcurbelo@gmail.com"}
]
description = "Habla con tus documentos"
readme = "README.rst"
license = {file = "LICENSE.txt"}
keywords = ["chat", "doc", "IA", "RAG"]
classifiers = [
  "Development Status :: 1 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
cli = [
  "rich",
]

[project.urls]
Homepage = "https://icurbe.com"

[project.scripts]
start = "main:main"
